--- a/gradle.properties
+++ b/gradle.properties
@@ -14,9 +14,8 @@ org.gradle.jvmargs=-Xmx2048m
 android.useAndroidX=true
 
 # TODO Change user-facing application name (also used in server- and client-side JavaDoc generation).
-appName=Capstone Project
+appName=Chat
 
-# TODO Change base package name; this will be unique identifier of the app, and group ID of app & server components.
-basePackageName=edu.cnm.deepdive.capstone
+basePackageName=edu.cnm.deepdive.chat
 
-version=21.0.2
+version=21.0.0
