--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,7 +31,7 @@
     tools:ignore="AllowBackup,DataExtractionRules">
 
     <activity
-      android:name=".controller.MainActivity"
+      android:name=".controller.LoginActivity"
       android:exported="true">
 
       <intent-filter>
@@ -40,6 +40,10 @@
       </intent-filter>
 
     </activity>
+
+    <activity
+      android:name=".controller.MainActivity"
+      android:exported="false"/>
 
   </application>
 
