--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,17 +21,18 @@
   <uses-permission android:name="android.permission.INTERNET"/>
 
   <application
+    android:name=".ChatApplication"
+    android:usesCleartextTraffic="true"
     android:allowBackup="false"
     android:icon="@mipmap/ic_launcher"
     android:label="@string/app_name"
-    android:name=".ChatApplication"
     android:roundIcon="@mipmap/ic_launcher_round"
     android:supportsRtl="true"
     android:theme="@style/AppTheme"
     tools:ignore="AllowBackup,DataExtractionRules">
 
     <activity
-      android:name=".controller.MainActivity"
+      android:name=".controller.LoginActivity"
       android:exported="true">
 
       <intent-filter>
@@ -40,6 +41,10 @@
       </intent-filter>
 
     </activity>
+
+    <activity
+      android:name=".controller.MainActivity"
+      android:exported="false"/>
 
   </application>
 
